...
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="enter_comment">Enter comment</string>
    <string name="my_article">My Account</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="delete">Delete</string>
    <string name="_continue">Continue</string>
    <string name="pin_do_not_match">PIN codes do not match</string>
    <string name="enter_pin">Enter PIN code</string>
    <string name="access_pin">Confirm PIN code</string>
    <string name="invalid_pin">Invalid PIN</string>
    <string name="unblock">Unblock</string>
    <string name="click">Short</string>
    <string name="text_handle_move">Long</string>
...
