...
                    Icon(
                        painter = if (showPassword) painterResource(R.drawable.visibility_off) else painterResource(R.drawable.visibility),
                        contentDescription = if (showPassword) "Скрыть" else "Показать"
                    )
                }
            },
            modifier = Modifier.fillMaxWidth().testTag("pinInput")
        )

        Spacer(Modifier.height(16.dp))

        OutlinedTextField(
            value = confirmPin,
...
                    Icon(
                        painter = if (showPassword) painterResource(R.drawable.visibility_off) else painterResource(R.drawable.visibility),
                        contentDescription = if (showPassword) "Скрыть" else "Показать"
                    )
                }
            },
            modifier = Modifier.fillMaxWidth().testTag("confirmPinInput")
        )

        if (error) {
            Spacer(Modifier.height(8.dp))
            Text(
                text = stringResource(R.string.pin_do_not_match),
...
